--- a/public/ng-views/about.html
+++ b/public/ng-views/about.html
@@ -1,1 +1,36 @@
-Hello world
+<section class="about-section">
+    <h2 class="text-center about-header">FREQUENTLY ASKED QUESTIONS</h2>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <h3>What is this site?</h3>
+                <p>Inspired by <a href="http://novocalculus.com/streams2017/streams_small.php">Novocalculus</a>, this site is a directory of <a href="https://twitch.tv">Twitch</a> streams for each Professional League of Legends player across all major regions. This site also provides details of the players, including image, bio, and other miscellaneous information.</p>
+            </div>
+            <div class="col-md-6">
+                <h3>What technologies were used?</h3>
+                <p>
+                    <b>Frontend:</b> AngularJS, HTML5, SASS, Bootstrap 3, Twitch API (v2)<br />
+                    <b>Backend:</b> Laravel 5.5, PHP 7.1, MySQL, (LAMP Stack)<br />
+                </p>
+            </div>
+        </div>
+        
+        <div class="row">
+            <div class="col-md-6">
+                <h3>How often is this site updated?</h3>
+                <p>I follow the eSports scene obsessively, so I try to update this constantly. I built a few cronjobs that can update automatically by sweeping the <a href="http://www.lolesports.com">Official eSports site</a> as well as decoding the unofficial Riot eSports API. However, it is prone to error and I often update information manually. Please contact me if you see anything out of date!</p>
+            </div>
+            <div class="col-md-6">
+                <h3>How can I contact you?</h3>
+                <p>
+                    <ul class="social-media">
+                        <li><a href="https://twitter.com/plazajosue"><i class="fab fa-twitter fa-2x"></i></a></li>
+                        <li><a href="mailto:mail@proplayers.online"><i class="far fa-envelope fa-2x"></i></a></li>
+                        <li><a href="https://www.josueplaza.com"><i class="far fa-globe fa-2x"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/josueplaza"><i class="fab fa-linkedin fa-2x"></i></a></li>
+                    
+                </p>
+            </div>
+        </div> 
+    </div>
+</section>
